--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,3 @@
-@import 'scss/header/header';
-@import 'scss/main/main';
-@import 'scss/footer/footer';
+@import 'assets/scss/footer/footer';
+@import 'assets/scss/main/main';
+@import 'assets/scss/header/header';
